trying edge cases

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ddgs>=9.6.1",
     "deepagents>=0.2.4",
     "ipykernel>=7.1.0",
     "langchain-community>=0.4.1",
