--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "deepagents>=0.2.4",
     "ipykernel>=7.1.0",
     "langchain-community>=0.4.1",
+    "langchain-google-genai>=3.0.0",
     "langchain-ollama>=1.0.0",
 ]
