--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,5 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-google-genai>=3.0.0",
     "langchain-ollama>=1.0.0",
+    "yfinance>=0.2.66",
 ]
